--- a/salesjs/salesjs/App.xaml
+++ b/salesjs/salesjs/App.xaml
@@ -1,8 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:infra="clr-namespace:salesjs.Infrastructure"
              x:Class="salesjs.App">
 	<Application.Resources>
-    
+        <ResourceDictionary>
+
+            <!-- creamos el Locator -->
+
+            <infra:InstanceLocator x:Key="Locator"/>
+
+            <!-- Parameters -->
+
+            <x:String x:Key="UrlAPI">https://salesjsapi.azurewebsites.net</x:String>
+
+        </ResourceDictionary>
 	</Application.Resources>
 </Application>
